# TickTock

./: .gitignore  LICENSE  README.md  build_log.txt  check_log.txt  package-lock.json  package.json
scripts/: gen-ico.mjs  gen-icons.mjs
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  out.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
