[package]
name = "countdown-manager"
version = "0.1.0"
description = "Countdown Manager Desktop App"
authors = ["TickTock"]
edition = "2021"

[lib]
name = "countdown_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "countdown-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
